appId: com.arasdigital.nesymobile.rstest
---
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
    timeout: 10000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
- eraseText: 80
- inputText: "6880051000263919"
- hideKeyboard
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_ok"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: ".*"
    timeout: 6000
    optional: true
