appId: com.arasdigital.nesymobile.rstest
---
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
    timeout: 15000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
    timeout: 10000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
- eraseText: 100
- inputText: "N6880120009700000010006880110004100112711000292361378563842VD18411"
- hideKeyboard
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_ok"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: ".*"
    timeout: 5000
    optional: true
