appId: com.arasdigital.nesymobile.rstest
---
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
    timeout: 8000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
- eraseText: 80
- inputText: "6880051000263216"
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_ok"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/btnDelivery"
    timeout: 15000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btnDelivery"
- swipe:
    start: "50%, 50%"
    end: "50%, 50%"
    duration: 2500
