appId: com.arasdigital.nesymobile.rstest
---
- tapOn:
    id: com.arasdigital.nesymobile.rstest:id/manuel_input
- tapOn:
    id: com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number
- eraseText: 40
- inputText: "6880051000269515"
- tapOn:
    id: com.arasdigital.nesymobile.rstest:id/btn_ok
- extendedWaitUntil:
    visible:
      id: nesy_probe_never
    timeout: 12000
    optional: true
