appId: com.arasdigital.nesymobile.rstest
---
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
    timeout: 15000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
    timeout: 10000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
- eraseText: 80
- inputText: "74901237799972"
- hideKeyboard
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_ok"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: ".*"
    timeout: 5000
    optional: true
