appId: com.arasdigital.nesymobile.rstest
---
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/rv_notifications"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_exit"
          optional: true
      - pressKey: Back
- runFlow:
    when:
      visible: "Fiscal Created"
    commands:
      - pressKey: Back
- pressKey: Back
- extendedWaitUntil:
    visible: "Stop List"
    timeout: 15000
    optional: true
