appId: com.arasdigital.nesymobile.rstest
---
- extendedWaitUntil:
    visible: "Which operation do you want for this shipment?"
    timeout: 10000
- tapOn: "DELIVERY"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/tie_delivery_name"
    timeout: 20000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/tie_delivery_name"
- inputText: "Test Receiver"
- pressKey: Enter
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "com.arasdigital.nesymobile.rstest:id/btn_deliver"
    direction: DOWN
    timeout: 15000
- swipe:
    start: "25%, 78%"
    end: "75%, 78%"
    duration: 500
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_deliver"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btnDely"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btnDely"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- runFlow:
    when:
      visible: "Cash"
    commands:
      - tapOn: "Cash"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- extendedWaitUntil:
    visible: "Stop List"
    timeout: 45000
    optional: true
